<resources>
    <string name="app_name">Easy Training</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_training">NewTrainingActivity</string>
    <string name="title_activity_new_exercise">NewExercise</string>
    <string name="title_activity_my_trainings">MyTrainings</string>
    <string name="n_of_repetitions">Nº of repetitions:</string>
    <string name="n_of_sequences">Nº of sequences:</string>
    <string name="type">Type:</string>
    <string name="name">Name:</string>
    <string name="ex_Supino">ex: Supino</string>
    <string name="ex_gym_a">ex: Gym A</string>
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="new_training">New Training</string>
    <string name="new_exercise">New Exercise</string>
    <string name="my_trainings">My Trainings</string>
    <string name="add_new_training">Add New Training</string>
    <string name="break_length">Break Length:</string>
    <string name="speed">Speed:</string>
    <string name="slow">Slow</string>
    <string name="average">Average</string>
    <string name="fast">Fast</string>
    <string name="none">None\n</string>
    <string name="next_exercise">Next Exercise:</string>
    <string name="current_exercise">Current Exercise:</string>
    <string name="finished">Finished</string>
    <string name="done">Done</string>
    <string name="go">GO!</string>
    <string name="set">SET</string>
    <string name="ready">READY</string>
    <string name="tap_to_pause">(Tap to pause)</string>
    <string name="tap_to_resume">(Tap to resume)</string>
    <string name="empty" />
    <string name="no_exercises">There are no exercises here :(</string>
    <string-array name="typesArray">
        <item>Bodybuilding</item>
        <!--
        <item>Fighting</item>
        <item>Running</item>
        -->
    </string-array>
    <string-array name="minutesArray">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="secondsArray">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
</resources>
