<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mellocastanho.easytraining.NewExerciseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_exercise"
        android:id="@+id/newExerciseTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:enabled="true"
        android:inputType="textCapWords"
        android:nestedScrollingEnabled="true"
        android:textSize="20sp"
        android:elegantTextHeight="true"
        android:selectAllOnFocus="false"
        android:layout_below="@+id/newExerciseTextView"
        android:layout_toRightOf="@+id/nameTextView"
        android:layout_toEndOf="@+id/nameTextView"
        android:singleLine="true"
        android:hint="@string/ex_Supino"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:paddingBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/nameTextView"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/nameEditText"
        android:layout_alignBaseline="@+id/nameEditText" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/typeSpinner"
        android:entries="@array/typesArray"
        android:layout_alignStart="@+id/nameEditText"
        android:focusable="false"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/typeTextView"
        android:layout_alignBottom="@+id/typeTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:id="@+id/typeTextView"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@+id/nameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_of_sequences"
        android:id="@+id/nOfSequencesTextView"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@+id/typeTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nOfSequencesSeekBar"
        android:max="10"
        android:progress="3"
        android:indeterminate="false"
        android:layout_toEndOf="@+id/nameEditText"
        android:layout_toRightOf="@+id/nOfSequences"
        android:layout_alignTop="@+id/nOfSequencesTextView" />

    <TextView
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/nOfSequences"
        android:textSize="20dp"
        android:layout_toRightOf="@+id/nOfSequencesTextView"
        android:editable="false"
        android:inputType="number"
        android:numeric="integer"
        android:textIsSelectable="false"
        android:singleLine="false"
        android:selectAllOnFocus="false"
        android:autoText="false"
        android:layout_marginLeft="5dp"
        android:layout_alignBottom="@+id/nOfSequencesTextView"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_of_repetitions"
        android:id="@+id/nOfRepetitionsTextView"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@+id/nOfSequencesSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="7dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nOfRepetitionsSeekBar"
        android:max="30"
        android:progress="12"
        android:indeterminate="false"
        android:layout_alignParentLeft="false"
        android:layout_alignTop="@+id/nOfRepetitionsTextView"
        android:layout_alignLeft="@+id/nOfSequencesSeekBar" />

    <TextView
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/nOfRepetitions"
        android:textSize="20dp"
        android:editable="false"
        android:inputType="number"
        android:numeric="integer"
        android:textIsSelectable="false"
        android:singleLine="false"
        android:selectAllOnFocus="false"
        android:autoText="false"
        android:layout_alignBaseline="@+id/nOfRepetitionsTextView"
        android:layout_toRightOf="@+id/nOfRepetitionsTextView"
        android:layout_marginLeft="5dp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/break_length"
        android:id="@+id/breakLengthTextView"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@+id/nOfRepetitionsSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="7dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/breakLengthMinutesSpinner"
        android:entries="@array/minutesArray"
        android:focusable="false"
        android:layout_alignTop="@+id/breakLengthTextView"
        android:layout_toEndOf="@+id/breakLengthTextView"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:id="@+id/breakLengthColonTextView"
        android:layout_alignParentBottom="false"
        android:layout_toRightOf="@+id/breakLengthMinutesSpinner"
        android:layout_alignBottom="@+id/breakLengthMinutesSpinner"
        android:layout_alignTop="@+id/breakLengthMinutesSpinner" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/breakLengthSecondsSpinner"
        android:entries="@array/secondsArray"
        android:focusable="false"
        android:layout_toRightOf="@+id/breakLengthColonTextView"
        android:layout_toEndOf="@+id/breakLengthColonTextView"
        android:layout_alignBottom="@+id/breakLengthColonTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/breakLengthExplanationTextView"
        android:layout_toRightOf="@+id/breakLengthSecondsSpinner"
        android:layout_toEndOf="@id/breakLengthSecondsSpinner"
        android:layout_alignBottom="@+id/breakLengthSecondsSpinner"
        android:hint="(mm:ss)" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:id="@+id/speedTextView"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@+id/breakLengthTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/average"
        android:id="@+id/speedShowTextView"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/speedTextView"
        android:layout_toEndOf="@+id/speedTextView"
        android:gravity="center_horizontal"
        android:layout_alignTop="@+id/speedTextView" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/speedSeekBar"
        android:max="30"
        android:progress="15"
        android:indeterminate="false"
        android:layout_alignTop="@+id/speedShowTextView"
        android:layout_toRightOf="@+id/speedShowTextView"
        android:layout_toEndOf="@+id/speedShowTextView" />

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/cancelImageButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/wrong_mark"
        android:scaleType="fitCenter"
        android:cropToPadding="false"
        android:background="#00ffffff"
        android:onClick="cancelButtonDoIt"/>

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/checkImageButton"
        android:src="@drawable/check_mark"
        android:scaleType="fitCenter"
        android:layout_alignTop="@+id/cancelImageButton"
        android:layout_alignParentEnd="true"
        android:background="#00ffffff"
        android:onClick="checkButtonDoIt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView"
        android:layout_below="@+id/breakLengthSecondsSpinner"
        android:layout_toLeftOf="@+id/newExerciseTextView"
        android:layout_toStartOf="@+id/newExerciseTextView" />


</RelativeLayout>
