<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <ImageButton
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:id="@+id/circleImageButton"
        android:src="@drawable/start"
        android:scaleType="fitXY"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#00ffffff"
        android:onClick="startButtonDoIt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_exercise"
        android:id="@+id/currExerciseTextView"
        android:textSize="25sp"
        android:layout_above="@+id/currExerciseTextView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:id="@+id/currExerciseTextView2"
        android:layout_above="@+id/circleImageButton"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_exercise"
        android:id="@+id/nextExerciseTextView"
        android:textSize="20sp"
        android:layout_below="@+id/circleImageButton"
        android:layout_centerHorizontal="true"
        android:textColor="#a6a6a6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:id="@+id/nextExerciseTextView2"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@+id/nextExerciseTextView"
        android:layout_centerHorizontal="true"
        android:textColor="#a6a6a6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeLeftTextView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="40sp" />

</RelativeLayout>
